--- a/main.html
+++ b/main.html
@@ -12,14 +12,15 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<p class="text-muted">List of all transcations</p>
-<table class="table">
-<thead class="thead-dark">
+<div class="table-responsive">
+<caption>List of all transcations</caption>
+<table class="table table-hover">
+<thead class="table-dark">
 	<tr>
-		<th>#</th>
-		<th>From</th>
-		<th>To</th>
-		<th>Ammount($)</th>
+		<th scope="col">#</th>
+		<th scope="col">From</th>
+		<th scope="col">To</th>
+		<th scope="col">Ammount($)</th>
 	</tr>
 </thead>
 <tbody>
@@ -43,10 +44,13 @@
 	</tr>
 	
 </tbody>
-<tr>
-	<td id="total" class="fw-bold"> Total 4000 </td>	
+<tfoot>
+	<tr>
+		<td id="total" colspan="4" class="fw-bold text-end"> Total 4000</td>	
 	</tr>
+</tfoot>
 </table>
+</div>
 </body>
 
 </html>
