--- a/main.html
+++ b/main.html
@@ -13,8 +13,9 @@
     <script type="text/javascript" src="./script.js">
 </script>
 <div class="table-responsive">
-<caption>List of all transcations</caption>
+
 <table class="table table-hover">
+	<caption>List of all transcations</caption>
 <thead class="table-dark">
 	<tr>
 		<th scope="col">#</th>
@@ -44,9 +45,9 @@
 	</tr>
 	
 </tbody>
-<tfoot>
+<tfoot class="table-light">
 	<tr>
-		<td id="total" colspan="4" class="fw-bold text-end"> Total 4000</td>	
+		<td id="total" colspan="3" class="fw-bold text-end"> Total 4000</td>	
 	</tr>
 </tfoot>
 </table>
